welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:1: error: ':' expected but identifier found.
def goAndGet(Int i) {do {
                 ^Methods:17: error: identifier expected but '}' found.
	} 
        ^